# prune

./: Cargo.toml  README.md  build.rs  install.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  rust.yml
src/: args.rs  cfg.rs  dbg.rs  dir.rs  duration.rs  expl.rs  find.rs  fs.rs  lib.rs  logger.rs  main.rs  parse.rs  prefix_tree.rs  print.rs  size.rs  tree.rs  trie.rs
test_dirs/: file0
test_dirs/sub_dir/: file2
