[package]
name = "prn"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "2.33"
humansize = "1.1"
regex = "1.3"
log = "0.4"
env_logger = "0.7"
fwalker = "0.3.3"
itertools = "0.9"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true