[package]
name = "prn"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
description = "Command line tool for finding large files"
edition = "2021"
build = "build.rs"

[dependencies]
structopt = "0.3"
humansize = "1.1"
regex = "1.5.5"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
walkdir = "2.3"
itertools = "0.10"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true
